[package]
name = "space_invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.0"
log = "0.4.17"
log4rs = "1.2.0"
project-root = "0.2.2"
rusty_audio = "1.4.0"
rusty_time = "0.12.0"
